// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContextExplorer > should expand and collapse 1`] = `
<body>
  <div>
    <div
      class="_context_explorer_56fce1 _visible_56fce1"
    >
      <div
        class="__message_56fce1_56fce1"
      />
      <div
        class="_panel_56fce1"
      >
        <div>
          <div
            class="_row_56fce1"
            style="margin-left: 0px;"
          >
            <div
              class="__arrow_right_56fce1_56fce1"
            >
              ›
            </div>
            <div
              class="__key_56fce1_56fce1"
            >
              day
              <div
                class="_key_summary_56fce1"
              />
              <div
                class="_clipboard_56fce1"
                data-testid="context-row-day-copy"
              >
                <div
                  data-use-vue-component-wrap=""
                  data-v-app=""
                >
                  <span
                    class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm _copy_icon_56fce1"
                    data-v-930380cc=""
                  >
                    copy
                  </span>
                </div>
              </div>
            </div>
            <div
              class="_str_value_56fce1"
            >
              020120
            </div>
          </div>
        </div>
        <div>
          <div
            class="_row_56fce1"
            style="margin-left: 0px;"
          >
            <div
              class="__arrow_right_56fce1_56fce1 __has_children_56fce1_56fce1 __open_56fce1_56fce1"
            >
              ›
            </div>
            <div
              class="__key_56fce1_56fce1 __has_children_56fce1_56fce1"
            >
              temperatures
              <div
                class="_key_summary_56fce1"
              >
                [6]
              </div>
              <div
                class="_clipboard_56fce1"
                data-testid="context-row-temperatures-copy"
              >
                <div
                  data-use-vue-component-wrap=""
                  data-v-app=""
                >
                  <span
                    class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm _copy_icon_56fce1"
                    data-v-930380cc=""
                  >
                    copy
                  </span>
                </div>
              </div>
            </div>
            <div
              class="_str_value_56fce1"
            />
          </div>
          <div>
            <div
              class="_row_56fce1"
              style="margin-left: 10px;"
            >
              <div
                class="__arrow_right_56fce1_56fce1"
              >
                ›
              </div>
              <div
                class="__key_56fce1_56fce1"
              >
                0
                <div
                  class="_key_summary_56fce1"
                />
                <div
                  class="_clipboard_56fce1"
                  data-testid="context-row-0-copy"
                >
                  <div
                    data-use-vue-component-wrap=""
                    data-v-app=""
                  >
                    <span
                      class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm _copy_icon_56fce1"
                      data-v-930380cc=""
                    >
                      copy
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="_str_value_56fce1"
              >
                23.2
              </div>
            </div>
          </div>
          <div>
            <div
              class="_row_56fce1"
              style="margin-left: 10px;"
            >
              <div
                class="__arrow_right_56fce1_56fce1"
              >
                ›
              </div>
              <div
                class="__key_56fce1_56fce1"
              >
                1
                <div
                  class="_key_summary_56fce1"
                />
                <div
                  class="_clipboard_56fce1"
                  data-testid="context-row-1-copy"
                >
                  <div
                    data-use-vue-component-wrap=""
                    data-v-app=""
                  >
                    <span
                      class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm _copy_icon_56fce1"
                      data-v-930380cc=""
                    >
                      copy
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="_str_value_56fce1"
              >
                21.2
              </div>
            </div>
          </div>
          <div>
            <div
              class="_row_56fce1"
              style="margin-left: 10px;"
            >
              <div
                class="__arrow_right_56fce1_56fce1"
              >
                ›
              </div>
              <div
                class="__key_56fce1_56fce1"
              >
                2
                <div
                  class="_key_summary_56fce1"
                />
                <div
                  class="_clipboard_56fce1"
                  data-testid="context-row-2-copy"
                >
                  <div
                    data-use-vue-component-wrap=""
                    data-v-app=""
                  >
                    <span
                      class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm _copy_icon_56fce1"
                      data-v-930380cc=""
                    >
                      copy
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="_str_value_56fce1"
              >
                20.3
              </div>
            </div>
          </div>
          <div>
            <div
              class="_row_56fce1"
              style="margin-left: 10px;"
            >
              <div
                class="__arrow_right_56fce1_56fce1"
              >
                ›
              </div>
              <div
                class="__key_56fce1_56fce1"
              >
                3
                <div
                  class="_key_summary_56fce1"
                />
                <div
                  class="_clipboard_56fce1"
                  data-testid="context-row-3-copy"
                >
                  <div
                    data-use-vue-component-wrap=""
                    data-v-app=""
                  >
                    <span
                      class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm _copy_icon_56fce1"
                      data-v-930380cc=""
                    >
                      copy
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="_str_value_56fce1"
              >
                20.5
              </div>
            </div>
          </div>
          <div>
            <div
              class="_row_56fce1"
              style="margin-left: 10px;"
            >
              <div
                class="__arrow_right_56fce1_56fce1"
              >
                ›
              </div>
              <div
                class="__key_56fce1_56fce1"
              >
                4
                <div
                  class="_key_summary_56fce1"
                />
                <div
                  class="_clipboard_56fce1"
                  data-testid="context-row-4-copy"
                >
                  <div
                    data-use-vue-component-wrap=""
                    data-v-app=""
                  >
                    <span
                      class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm _copy_icon_56fce1"
                      data-v-930380cc=""
                    >
                      copy
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="_str_value_56fce1"
              >
                20.11
              </div>
            </div>
          </div>
          <div>
            <div
              class="_row_56fce1"
              style="margin-left: 10px;"
            >
              <div
                class="__arrow_right_56fce1_56fce1"
              >
                ›
              </div>
              <div
                class="__key_56fce1_56fce1"
              >
                5
                <div
                  class="_key_summary_56fce1"
                />
                <div
                  class="_clipboard_56fce1"
                  data-testid="context-row-5-copy"
                >
                  <div
                    data-use-vue-component-wrap=""
                    data-v-app=""
                  >
                    <span
                      class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm _copy_icon_56fce1"
                      data-v-930380cc=""
                    >
                      copy
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="_str_value_56fce1"
              >
                21.3
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="_row_56fce1"
            style="margin-left: 0px;"
          >
            <div
              class="__arrow_right_56fce1_56fce1"
            >
              ›
            </div>
            <div
              class="__key_56fce1_56fce1"
            >
              location
              <div
                class="_key_summary_56fce1"
              />
              <div
                class="_clipboard_56fce1"
                data-testid="context-row-location-copy"
              >
                <div
                  data-use-vue-component-wrap=""
                  data-v-app=""
                >
                  <span
                    class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm _copy_icon_56fce1"
                    data-v-930380cc=""
                  >
                    copy
                  </span>
                </div>
              </div>
            </div>
            <div
              class="_str_value_56fce1"
            >
              A1B2C3
            </div>
          </div>
        </div>
      </div>
      <div
        class="_footer_56fce1"
      >
        <div
          class="_empty_toggle_56fce1"
          data-testid="empty-toggle"
        >
          <div
            data-use-vue-component-wrap=""
            data-v-app=""
          >
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm"
              data-v-930380cc=""
            >
              visibility_off
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ContextExplorer > should handle undefined content 1`] = `
<body>
  <div>
    <div
      class="_context_explorer_56fce1 _visible_56fce1"
    >
      <div
        class="__message_56fce1_56fce1"
      />
      <div
        class="_panel_56fce1"
      />
      <div
        class="_footer_56fce1"
      >
        <div
          class="_empty_toggle_56fce1"
          data-testid="empty-toggle"
        >
          <div
            data-use-vue-component-wrap=""
            data-v-app=""
          >
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm"
              data-v-930380cc=""
            >
              visibility_off
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ContextExplorer > should render 1`] = `
<body>
  <div>
    <div
      class="_context_explorer_56fce1 _visible_56fce1"
    >
      <div
        class="__message_56fce1_56fce1"
      />
      <div
        class="_panel_56fce1"
      >
        <div>
          <div
            class="_row_56fce1"
            style="margin-left: 0px;"
          >
            <div
              class="__arrow_right_56fce1_56fce1"
            >
              ›
            </div>
            <div
              class="__key_56fce1_56fce1"
            >
              day
              <div
                class="_key_summary_56fce1"
              />
              <div
                class="_clipboard_56fce1"
                data-testid="context-row-day-copy"
              >
                <div
                  data-use-vue-component-wrap=""
                  data-v-app=""
                >
                  <span
                    class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm _copy_icon_56fce1"
                    data-v-930380cc=""
                  >
                    copy
                  </span>
                </div>
              </div>
            </div>
            <div
              class="_str_value_56fce1"
            >
              020120
            </div>
          </div>
        </div>
        <div>
          <div
            class="_row_56fce1"
            style="margin-left: 0px;"
          >
            <div
              class="__arrow_right_56fce1_56fce1 __has_children_56fce1_56fce1"
            >
              ›
            </div>
            <div
              class="__key_56fce1_56fce1 __has_children_56fce1_56fce1"
            >
              temperatures
              <div
                class="_key_summary_56fce1"
              >
                [6]
              </div>
              <div
                class="_clipboard_56fce1"
                data-testid="context-row-temperatures-copy"
              >
                <div
                  data-use-vue-component-wrap=""
                  data-v-app=""
                >
                  <span
                    class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm _copy_icon_56fce1"
                    data-v-930380cc=""
                  >
                    copy
                  </span>
                </div>
              </div>
            </div>
            <div
              class="_str_value_56fce1"
            />
          </div>
        </div>
        <div>
          <div
            class="_row_56fce1"
            style="margin-left: 0px;"
          >
            <div
              class="__arrow_right_56fce1_56fce1"
            >
              ›
            </div>
            <div
              class="__key_56fce1_56fce1"
            >
              location
              <div
                class="_key_summary_56fce1"
              />
              <div
                class="_clipboard_56fce1"
                data-testid="context-row-location-copy"
              >
                <div
                  data-use-vue-component-wrap=""
                  data-v-app=""
                >
                  <span
                    class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm _copy_icon_56fce1"
                    data-v-930380cc=""
                  >
                    copy
                  </span>
                </div>
              </div>
            </div>
            <div
              class="_str_value_56fce1"
            >
              A1B2C3
            </div>
          </div>
        </div>
      </div>
      <div
        class="_footer_56fce1"
      >
        <div
          class="_empty_toggle_56fce1"
          data-testid="empty-toggle"
        >
          <div
            data-use-vue-component-wrap=""
            data-v-app=""
          >
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm"
              data-v-930380cc=""
            >
              visibility_off
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ContextExplorer > should show and hide keys with empty values 1`] = `
<body>
  <div>
    <div
      class="_context_explorer_56fce1 _visible_56fce1"
    >
      <div
        class="__message_56fce1_56fce1"
      />
      <div
        class="_panel_56fce1"
      >
        <div>
          <div
            class="_row_56fce1"
            style="margin-left: 0px;"
          >
            <div
              class="__arrow_right_56fce1_56fce1"
            >
              ›
            </div>
            <div
              class="__key_56fce1_56fce1"
            >
              day
              <div
                class="_key_summary_56fce1"
              />
              <div
                class="_clipboard_56fce1"
                data-testid="context-row-day-copy"
              >
                <div
                  data-use-vue-component-wrap=""
                  data-v-app=""
                >
                  <span
                    class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm _copy_icon_56fce1"
                    data-v-930380cc=""
                  >
                    copy
                  </span>
                </div>
              </div>
            </div>
            <div
              class="_str_value_56fce1"
            >
              020120
            </div>
          </div>
        </div>
        <div>
          <div
            class="_row_56fce1"
            style="margin-left: 0px;"
          >
            <div
              class="__arrow_right_56fce1_56fce1 __has_children_56fce1_56fce1"
            >
              ›
            </div>
            <div
              class="__key_56fce1_56fce1 __has_children_56fce1_56fce1"
            >
              temperatures
              <div
                class="_key_summary_56fce1"
              >
                [6]
              </div>
              <div
                class="_clipboard_56fce1"
                data-testid="context-row-temperatures-copy"
              >
                <div
                  data-use-vue-component-wrap=""
                  data-v-app=""
                >
                  <span
                    class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm _copy_icon_56fce1"
                    data-v-930380cc=""
                  >
                    copy
                  </span>
                </div>
              </div>
            </div>
            <div
              class="_str_value_56fce1"
            />
          </div>
        </div>
        <div>
          <div
            class="_row_56fce1"
            style="margin-left: 0px;"
          >
            <div
              class="__arrow_right_56fce1_56fce1"
            >
              ›
            </div>
            <div
              class="__key_56fce1_56fce1"
            >
              location
              <div
                class="_key_summary_56fce1"
              />
              <div
                class="_clipboard_56fce1"
                data-testid="context-row-location-copy"
              >
                <div
                  data-use-vue-component-wrap=""
                  data-v-app=""
                >
                  <span
                    class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm _copy_icon_56fce1"
                    data-v-930380cc=""
                  >
                    copy
                  </span>
                </div>
              </div>
            </div>
            <div
              class="_str_value_56fce1"
            >
              A1B2C3
            </div>
          </div>
        </div>
      </div>
      <div
        class="_footer_56fce1"
      >
        <div
          class="_empty_toggle_56fce1"
          data-testid="empty-toggle"
        >
          <div
            data-use-vue-component-wrap=""
            data-v-app=""
          >
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm"
              data-v-930380cc=""
            >
              visibility_off
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ContextExplorer > should show and hide keys with empty values 2`] = `
<body>
  <div>
    <div
      class="_context_explorer_56fce1 _visible_56fce1"
    >
      <div
        class="__message_56fce1_56fce1"
      >
        Showing all keys
      </div>
      <div
        class="_panel_56fce1"
      >
        <div>
          <div
            class="_row_56fce1"
            style="margin-left: 0px;"
          >
            <div
              class="__arrow_right_56fce1_56fce1"
            >
              ›
            </div>
            <div
              class="__key_56fce1_56fce1"
            >
              day
              <div
                class="_key_summary_56fce1"
              />
              <div
                class="_clipboard_56fce1"
                data-testid="context-row-day-copy"
              >
                <div
                  data-use-vue-component-wrap=""
                  data-v-app=""
                >
                  <span
                    class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm _copy_icon_56fce1"
                    data-v-930380cc=""
                  >
                    copy
                  </span>
                </div>
              </div>
            </div>
            <div
              class="_str_value_56fce1"
            >
              020120
            </div>
          </div>
        </div>
        <div>
          <div
            class="_row_56fce1"
            style="margin-left: 0px;"
          >
            <div
              class="__arrow_right_56fce1_56fce1 __has_children_56fce1_56fce1"
            >
              ›
            </div>
            <div
              class="__key_56fce1_56fce1 __has_children_56fce1_56fce1"
            >
              temperatures
              <div
                class="_key_summary_56fce1"
              >
                [6]
              </div>
              <div
                class="_clipboard_56fce1"
                data-testid="context-row-temperatures-copy"
              >
                <div
                  data-use-vue-component-wrap=""
                  data-v-app=""
                >
                  <span
                    class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm _copy_icon_56fce1"
                    data-v-930380cc=""
                  >
                    copy
                  </span>
                </div>
              </div>
            </div>
            <div
              class="_str_value_56fce1"
            />
          </div>
        </div>
        <div>
          <div
            class="_row_56fce1"
            style="margin-left: 0px;"
          >
            <div
              class="__arrow_right_56fce1_56fce1"
            >
              ›
            </div>
            <div
              class="__key_56fce1_56fce1"
            >
              location
              <div
                class="_key_summary_56fce1"
              />
              <div
                class="_clipboard_56fce1"
                data-testid="context-row-location-copy"
              >
                <div
                  data-use-vue-component-wrap=""
                  data-v-app=""
                >
                  <span
                    class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm _copy_icon_56fce1"
                    data-v-930380cc=""
                  >
                    copy
                  </span>
                </div>
              </div>
            </div>
            <div
              class="_str_value_56fce1"
            >
              A1B2C3
            </div>
          </div>
        </div>
      </div>
      <div
        class="_footer_56fce1"
      >
        <div
          class="_empty_toggle_56fce1"
          data-testid="empty-toggle"
        >
          <div
            data-use-vue-component-wrap=""
            data-v-app=""
          >
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm"
              data-v-930380cc=""
            >
              visibility
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ContextExplorer > should show and hide keys with empty values 3`] = `
<body>
  <div>
    <div
      class="_context_explorer_56fce1 _visible_56fce1"
    >
      <div
        class="__message_56fce1_56fce1"
      >
        Showing keys with values
      </div>
      <div
        class="_panel_56fce1"
      >
        <div>
          <div
            class="_row_56fce1"
            style="margin-left: 0px;"
          >
            <div
              class="__arrow_right_56fce1_56fce1"
            >
              ›
            </div>
            <div
              class="__key_56fce1_56fce1"
            >
              day
              <div
                class="_key_summary_56fce1"
              />
              <div
                class="_clipboard_56fce1"
                data-testid="context-row-day-copy"
              >
                <div
                  data-use-vue-component-wrap=""
                  data-v-app=""
                >
                  <span
                    class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm _copy_icon_56fce1"
                    data-v-930380cc=""
                  >
                    copy
                  </span>
                </div>
              </div>
            </div>
            <div
              class="_str_value_56fce1"
            >
              020120
            </div>
          </div>
        </div>
        <div>
          <div
            class="_row_56fce1"
            style="margin-left: 0px;"
          >
            <div
              class="__arrow_right_56fce1_56fce1 __has_children_56fce1_56fce1"
            >
              ›
            </div>
            <div
              class="__key_56fce1_56fce1 __has_children_56fce1_56fce1"
            >
              temperatures
              <div
                class="_key_summary_56fce1"
              >
                [6]
              </div>
              <div
                class="_clipboard_56fce1"
                data-testid="context-row-temperatures-copy"
              >
                <div
                  data-use-vue-component-wrap=""
                  data-v-app=""
                >
                  <span
                    class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm _copy_icon_56fce1"
                    data-v-930380cc=""
                  >
                    copy
                  </span>
                </div>
              </div>
            </div>
            <div
              class="_str_value_56fce1"
            />
          </div>
        </div>
        <div>
          <div
            class="_row_56fce1"
            style="margin-left: 0px;"
          >
            <div
              class="__arrow_right_56fce1_56fce1"
            >
              ›
            </div>
            <div
              class="__key_56fce1_56fce1"
            >
              location
              <div
                class="_key_summary_56fce1"
              />
              <div
                class="_clipboard_56fce1"
                data-testid="context-row-location-copy"
              >
                <div
                  data-use-vue-component-wrap=""
                  data-v-app=""
                >
                  <span
                    class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm _copy_icon_56fce1"
                    data-v-930380cc=""
                  >
                    copy
                  </span>
                </div>
              </div>
            </div>
            <div
              class="_str_value_56fce1"
            >
              A1B2C3
            </div>
          </div>
        </div>
      </div>
      <div
        class="_footer_56fce1"
      >
        <div
          class="_empty_toggle_56fce1"
          data-testid="empty-toggle"
        >
          <div
            data-use-vue-component-wrap=""
            data-v-app=""
          >
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm"
              data-v-930380cc=""
            >
              visibility_off
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ContextExplorer > should show if visible 1`] = `
<body>
  <div>
    <div
      class="_context_explorer_56fce1 _visible_56fce1"
    >
      <div
        class="__message_56fce1_56fce1"
      />
      <div
        class="_panel_56fce1"
      />
      <div
        class="_footer_56fce1"
      >
        <div
          class="_empty_toggle_56fce1"
          data-testid="empty-toggle"
        >
          <div
            data-use-vue-component-wrap=""
            data-v-app=""
          >
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-snow unnnic-icon-size--sm"
              data-v-930380cc=""
            >
              visibility_off
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
